# GreedySnake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-tidy.yaml  test.yaml
src/: main.cpp
src/game/: Board.cpp  Board.h  CellType.h  Food.cpp  Food.h  Game.cpp  Game.h  GameApp.cpp  GameApp.h  Snake.cpp  Snake.h
src/input/: InputHandler.cpp  InputHandler.h
src/menu/: GameOverState.cpp  GameOverState.h  GamePlayState.cpp  GamePlayState.h  GameState.h  GameStateManager.cpp  GameStateManager.h  Input.h  MainMenuState.cpp  MainMenuState.h  Menu.cpp  Menu.h  MenuItem.h  SettingsMenuState.cpp  SettingsMenuState.h  SliderMenuItem.cpp  SliderMenuItem.h  TextMenuItem.cpp  TextMenuItem.h  ToggleMenuItem.cpp  ToggleMenuItem.h
src/renderer/: Renderer.h  SFMLRenderer.cpp  SFMLRenderer.h
src/settings/: GameSettings.cpp  GameSettings.h
src/tests/: BoardTest.cpp  DirectionTest.cpp  FoodTest.cpp  GameAppTest.cpp  GamePlayStateTest.cpp  GameTest.cpp  InputHandlerTest.cpp  PositionTest.cpp  SFMLRendererTest.cpp  SnakeTest.cpp
src/tests/menu/: GameStateTest.cpp  MainMenuStateTest.cpp  MenuItemTest.cpp  SettingsMenuStateTest.cpp  SpecializedMenuItemTest.cpp
src/tests/settings/: GameSettingsTest.cpp
src/utils/: Direction.h  Position.h
